# llvm-project

./: .arcconfig  .gitignore  Jenkinsfile  README.md  assemble.sh  build-ventus.sh  tutorial.md
.github/: CODEOWNERS
.github/workflows/: release-binary.yml  set-release-binary-outputs.sh  ventus-build.yml
clang/lib/CodeGen/: CGBuiltin.cpp  CGCall.cpp  CGExprScalar.cpp  TargetInfo.cpp
clang/lib/Headers/: opencl-c.h
clang/test/CodeGenOpenCL/: barrier.cl  builtins-riscv.cl  buitins-riscv.cl  ventus-call-kernel.cl
compiler-rt/lib/ventus/: crt0.S  ventus.h
libclc/: CMakeLists.txt  build_riscv32_archive.sh  build_riscv32clc.sh
libclc/cmake/: CMakeCLCInformation.cmake
libclc/generic/lib/: SOURCES  clcmacro.h  gen_convert.py
libclc/riscv32/lib/: CMakeLists.txt  SOURCES  crt0.S  ventus.h
libclc/riscv32/lib/compiler-rt/: adddf3.cl  comparedf2.cl  divdf3.cl  extendsfdf2.cl  fixdfdi.cl  fixdfsi.cl  fixsfdi.cl  float-intrinsics.cl  float-intrinsics.s  floatdidf.cl  floatdisf.cl  floatsidf.cl  floatundidf.cl  floatundisf.cl  floatunsidf.cl  floor.cl  fma.cl  isfinite.cl  libm.h  memcpy.cl  muldf3.cl  nextafterf.cl  subdef3.cl  truncdfsf2.cl  types.h  udivdi3.cl  udivmodti4.cl
libclc/riscv32/lib/printf/: CMakeLists.txt  main.c  printf.c  printf.h  printf_base.c  types.h
libclc/riscv32/lib/printf/errol/: errol.c  errol.h  itoa_c.h
libclc/riscv32/lib/synchronization/: barrier.cl
libclc/riscv32/lib/toAddr/: to_addr.S  to_addr.cl
libclc/riscv32/lib/workgroup/: wg.h  wganyall.cl  wgbarrier.cl  wgbcast.cl  wgreduce.cl  wgscan.cl  wgscratch.cl
libclc/riscv32/lib/workitem/: get_enqueued_local_size.cl  get_global_id.cl  get_global_linear_id.cl  get_global_offset.cl  get_global_size.cl  get_group_id.cl  get_local_id.cl  get_local_linear_id.cl  get_local_size.cl  get_num_groups.cl  get_work_dim.cl  workitem.S
llvm/: CMakeLists.txt
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp
llvm/lib/CodeGen/: MachineOperand.cpp  PrologEpilogInserter.cpp  TargetPassConfig.cpp  VirtRegMap.cpp
llvm/lib/IR/: AsmWriter.cpp
llvm/test/TableGen/: ConstraintChecking.inc  ConstraintChecking7.td  ConstraintChecking8.td
llvm/tools/opt/: opt.cpp
llvm/utils/TableGen/: CodeGenInstruction.cpp  CodeGenInstruction.h  InstrInfoEmitter.cpp
llvm/utils/release/: github-upload-release.py
(+145 files in other folders)
