cmake_minimum_required(VERSION 3.13.4)
set(FLAG "-Wall")
string(APPEND FLAG " -Wno-char-subscripts")
string(APPEND FLAG " -Wno-unused-variable")
string(APPEND FLAG " -Wno-void-pointer-to-int-cast")
string(APPEND FLAG " -Wno-incompatible-pointer-types")
string(APPEND FLAG " -Wno-pointer-sign")
string(APPEND FLAG " -Wno-constant-conversion")
string(APPEND FLAG " -Wno-constant-conversion")
string(APPEND FLAG " -Wno-constant-conversion")
set(CMAKE_C_FLAGS "${FLAG} -target riscv32 -mcpu=ventus-gpgpu -Dcl_khr_fp64 -ffunction-sections -fdata-sections")
# Above flags can be deleted later when printf is done
set(CMAKE_C_FLAGS_RELEASE "-O0 -DNDEBUG") # if not -O0, compiler will report error
file(GLOB SOURCES main.c printf_base.c printf.c errol/errol.c)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/errol)
foreach(source IN LISTS SOURCES)
    get_filename_component(target_name ${source} NAME_WE)
    add_library(${target_name} OBJECT ${source})
endforeach()
